--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Ezra Guiao </title>
-	<meta name="author" content="">
-	<meta name="description" content="A Personal Portfolio Website to showcase my projects and experiences">
+	<title>Ezra Guiao | CS Portfolio </title>
+	<meta name="author" content="Mikhail Ezra Guiao">
+	<meta name="description" content="Ezra Guiao's Personal Portfolio Website to showcase my projects and experiences">
+	<meta name="keywords" content="Ezra Guiao, Github, Linkedin, Computer Science, Mikhail Ezra L. Guiao">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -48,7 +49,7 @@
 			
 			<p>Ever since at a young age, I have always been fascinated by how the technologies around me can work. I quickly grew an affinity into learning and creating my very own designs. Working on projects has never been dull as I know the things I create help other people</p>
 			<!-- <blockquote>"Done is better than perfect!"</blockquote> -->
-			<p>Currently a first year university computer science student (as of 2022) my passion countines to grow as I learn so many more new things and hone my craft. I have dabbled myself in web and game development, but currently on focusing on data science </p>
+			<p>Currently a first year university computer science student (as of 2022) my passion countines to grow as I learn so many more new things and hone my craft. I have dabbled myself in web and game development, but currently on focusing on data science. </p>
 		
 			<h3 id="projects">projects.</h3>
 
@@ -80,10 +81,14 @@
 
 			<h3 id="contact">contact.</h3>
 			<p>Let me know if you have any questions.</p>
-			<p> guiaomikhail@gmail.com </p>
+			<p> Email - guiaomikhail@gmail.com </p>
+			<p> <a id='links' href=https://github.com/Cytical> Github </a> </p>
+			<p> <a id='links' href=https://www.linkedin.com/in/ezra-guiao> Linkedin </a> </p>
 			<div id="cta-container">
 				<button class="cta-button"><a href="mailto:guiaomikhail@gmail.com">Contact</a></button>
 			</div>
+
+			<p> &copy; 2022 Ezra Guiao  </p>
 		</div>
 	</div>
 </body>
