--- a/index.html
+++ b/index.html
@@ -79,6 +79,24 @@
 						href="https://pse-terminal.herokuapp.com/home">demo</a></button>
 			</div>
 
+			<h4 class="project-heading">Country Data Visualization</h4>
+			<hr style="height:6px; visibility:hidden;" />
+			<div id="project-0" class="project-container">
+				<img src="world data visual.png" style="max-height: 500px">
+			</div>
+			<hr style="height:60px; visibility:hidden;" />
+			
+			<p class="project-description"> Jupyter notebook with the Maddison Project Database.
+			Utilized pandas for data cleaning and exploratory data analysis.
+			</p>
+			<p class="project-description"></p>
+				
+			<p> Made using: Python - Pandas - Matplotlib</p>
+			<div class="project-button-container">
+				<button class="project-button code-button"><a href="https://github.com/Cytical/World-Data-Visualization/blob/main/Maddison%20Project.ipynb">&lt/&gt
+						code</a></button>
+			</div>
+
 			<h3 id="contact">contact.</h3>
 			<p>Let me know if you have any questions.</p>
 			<p> Email - guiaomikhail@gmail.com </p>
