fixed typo / grammar

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			
 			<p>Ever since at a young age, I have always been fascinated by how the technologies around me can work. I quickly grew an affinity into learning and creating my very own designs. Working on projects has never been dull as I know the things I create help other people</p>
 			<!-- <blockquote>"Done is better than perfect!"</blockquote> -->
-			<p>Currently a first year university computer science student (as of 2022) my passion countines to grow as I learn so many more new things and hone my craft. I have dabbled myself in web and game development, but currently on focusing on data science. </p>
+			<p>Currently a first year university computer science student (as of 2022) my passion countinues to grow as I learn so many more new things and hone my craft. I have dabbled myself in web and game development, but currently focusing on data science. </p>
 		
 			<h3 id="projects">projects.</h3>
 
