--- a/index.html
+++ b/index.html
@@ -43,18 +43,17 @@
 			</div>
 		</div>
 		<div id="site-content">
-			<h3 id="about-me">about me.</h3>
+			<!-- <h3 id="about-me">about me.</h3>
 
 			
 			<p>Ever since at a young age, I have always been fascinated by how the technologies around me can work. I quickly grew an affinity into learning and creating my very own designs. Working on projects has never been dull as I know the things I create help other people</p>
-			<!-- <blockquote>"Done is better than perfect!"</blockquote> -->
-			<p>Currently a first year university computer science student (as of 2022) my passion countines to grow as I learn so many more new things and hone my craft. I have dabbled myself in web and game development, but currently on focusing on data science </p>
+			<p>Currently a first year university computer science student (as of 2022) my passion countines to grow as I learn so many more new things and hone my craft. I have dabbled myself in web and game development, but currently on focusing on data science </p> -->
 		
 			<h3 id="projects">projects.</h3>
 
 			<h4 class="project-heading">Phillipine Stock Exchange Terminal</h4>
 			<div id="project-0" class="project-container">
-				<img src="terminal main.png" style="max-height: 400px">
+				<img src="terminal main.png">
 			</div>
 			<div class="space"></div>
 
@@ -66,7 +65,7 @@
 
 			<div class="space"></div>
 			<div id="project-1" class="project-container">
-				<img src="terminal chart.png" style="max-height: 400px">
+				<img src="terminal chart.png">
 			</div>
 
 			<p class="project-description"> Also integrates the tradingview chart </p>
