fixed dark mode

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 				<div class="mySlides1 slides">
 					<img src="images/acoustify search.png">
 				</div>
+				<div class="mySlides1 slides">
+					<img src="images/acoustify rank.png">
+				</div>
 			
 				<a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
 				<a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
@@ -76,6 +79,7 @@
 					<span class="dot" onclick="currentSlide(2, 0)"></span>
 					<span class="dot" onclick="currentSlide(3, 0)"></span>
 					<span class="dot" onclick="currentSlide(4, 0)"></span>
+					<span class="dot" onclick="currentSlide(5, 0)"></span>
 					<!-- Add more spans if needed for additional slides -->
 				</div>
 			</div>
@@ -129,19 +133,19 @@
 
 			<h3 id="academic work">academic work.</h3>
 
-			<h4 class="project-heading">Comprehensive Analysis of NBA Team Performance
+			<h4 class="project-heading"><a href="https://drive.google.com/file/d/1y1MawYBuIgJ6vd_Ab21X0RNnPJ3UI-Nu/view?usp=sharing">Comprehensive Analysis of NBA Team Performance
 			through Logistic and Linear Regression and Random
-			Forest Classifier for Predictive Modeling</h4>
+			Forest Classifier for Predictive Modeling</a></h4>
 			<div class="space"></div>
 			
 			<p> Used: Jupyter - Python - Numpy - Matplotlib</p>
 			<div class="project-button-container">
-				<button class="project-button code-button"><a href="https://github.com/Cytical/PSE_Terminal">&lt/&gt
+				<button class="project-button code-button"><a href="https://github.com/Cytical/nba-performace-prediction/blob/main/algorithm_and_results.ipynb">&lt/&gt
 						code</a></button>
-				<button class="project-button demo-button"><a href="https://pse-terminal.herokuapp.com/home">paper</a></button>
+				<button class="project-button demo-button"><a href="https://drive.google.com/file/d/1y1MawYBuIgJ6vd_Ab21X0RNnPJ3UI-Nu/view?usp=sharing">paper</a></button>
 			</div>
 
-			<h4 class="project-heading">Implementing a variant of BF Scheduler in xv6</h4>
+			<h4 class="project-heading"><a href="https://en.wikipedia.org/wiki/Brain_Fuck_Scheduler">Implementing a variant of BF Scheduler in xv6</a></h4>
 			<div class="space"></div>
 						<p class="project-description">Xv6 is an educational operating system inspired by Unix, developed at MIT. As part of our coursework, we were required to enhance the xv6 scheduler by integrating a skiplist data structure and incorporating virtual deadlines to determine
 						scheduling priorities. This involved modifying  kernel-level code to introduce custom system calls, including the
@@ -149,14 +153,11 @@
 						processes.
 						</p>
 			<p> Used: C - x86</p>
-			<div class="project-button-container">
-				<button class="project-button code-button"><a href="https://en.wikipedia.org/wiki/Brain_Fuck_Scheduler">info</a></button>
-
-			</div>
 
 			<h3 id="contact">contact.</h3>
 			<p>Let me know if you have any questions.</p>
 			<p> guiaomikhail@gmail.com </p>
+			<p> <a href="https://www.linkedin.com/in/ezra-guiao/"> linkedin </a></p>
 			<div id="cta-container">
 				<button class="cta-button"><a href="mailto:guiaomikhail@gmail.com">Contact</a></button>
 			</div>
