--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
 					<li><a href="#contact">contact</a></li>
 				</ul>
 			</div>
-			<div id="to-bottom">
-				<a href="#projects"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><g><rect fill="none" height="44" width="44"/><path d="M12,4c4.41,0,8,3.59,8,8s-3.59,8-8,8s-8-3.59-8-8S7.59,4,12,4 M12,2C6.48,2,2,6.48,2,12c0,5.52,4.48,10,10,10 c5.52,0,10-4.48,10-10C22,6.48,17.52,2,12,2L12,2z M13,12l0-4h-2l0,4H8l4,4l4-4H13z"/></g></svg></a>
-			</div>
+		<div id="to-bottom"><a href="#projects"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="down-arrow"><g data-name="Layer 2"><g data-name="arrowhead-down"><path d="M17.37 12.39 12 16.71l-5.36-4.48a1 1 0 1 0-1.28 1.54l6 5a1 1 0 0 0 1.27 0l6-4.83a1 1 0 0 0 .15-1.41 1 1 0 0 0-1.41-.14z"></path><path d="M11.36 11.77a1 1 0 0 0 1.27 0l6-4.83a1 1 0 0 0 .15-1.41 1 1 0 0 0-1.41-.15L12 9.71 6.64 5.23a1 1 0 0 0-1.28 1.54z"></path></g></g></svg></a>
+		</div>
 		</div>
 		<div id="site-content">
 			<h3 id="about-me">about me.</h3>
@@ -89,7 +88,7 @@
 			analysis
 			</p>
 
-			<p> Made using: Vue.js - REST API - HTML - CSS - JavaScript - Python</p>
+			<p> Made using: <span class="lang"> Vue.js - REST API - HTML - CSS - JavaScript - Python </span></p>
 			<div class="project-button-container">
 				<button class="project-button code-button"><a href="https://github.com/Cytical/Acoustify">&lt/&gt
 						code</a></button>
@@ -114,7 +113,6 @@
 				<div class="dot-container" style="text-align:center; padding-top: 20px;">
 					<span class="dot" onclick="currentSlide(1, 1)"></span>
 					<span class="dot" onclick="currentSlide(2, 1)"></span>
-					<!-- Add more spans if needed for additional slides -->
 				</div>
 			</div>
 				<div class="space"></div>
@@ -123,7 +121,7 @@
 				Company information is scraped from Marketwatch using BeautifulSoup. Main Page has a filter search to allows for user to type in the company ticker to get relevant up to date information. It also integrates the tradingview chart.
 			</p>
 
-			<p> Made using: Django - Python - HTML - CSS - Javascript</p>
+			<p> Made using: <span class="lang"> Django - Python - HTML - CSS - Javascript </span></p>
 			<div class="project-button-container">
 				<button class="project-button code-button"><a href="https://github.com/Cytical/PSE_Terminal">&lt/&gt
 						code</a></button>
@@ -138,7 +136,7 @@
 			Forest Classifier for Predictive Modeling</a></h4>
 			<div class="space"></div>
 			
-			<p> Used: Jupyter - Python - Numpy - Matplotlib</p>
+			<p> Used: <span class="lang"> Jupyter - Python - Numpy - Matplotlib </span></p>
 			<div class="project-button-container">
 				<button class="project-button code-button"><a href="https://github.com/Cytical/nba-performace-prediction/blob/main/algorithm_and_results.ipynb">&lt/&gt
 						code</a></button>
@@ -152,7 +150,7 @@
 						creation of a new fork function and a schedlog function aimed at printing detailed information about all running
 						processes.
 						</p>
-			<p> Used: C - x86</p>
+			<p> Used:<span class="lang"> C - x86 </span></p>
 
 			<h3 id="contact">contact.</h3>
 			<p>Let me know if you have any questions.</p>
@@ -161,7 +159,10 @@
 			<div id="cta-container">
 				<button class="cta-button"><a href="mailto:guiaomikhail@gmail.com">Contact</a></button>
 			</div>
+
+			
 		</div>
+				<div id="to-top"><a href="#projects"><img src="svg/double-arrow-top-icon.svg"/></a>
 	</div>
 </body>
 
